-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.5, 6.6.3
-
None
-
GNU/Linux
-
-
0e5d55132 (dev), 4b47d64f1 (6.7), 8c6032ca9 (tqtc/lts-6.5)
The tst_qdialogbuttonbox has been found to fail non-deterministically at least once by the GNU Guix build farm:
447/510 Test #462: tst_qdialogbuttonbox ..................................***Failed 0.28 sec ********* Start testing of tst_QDialogButtonBox ********* Config: Using QtTest library 6.6.3, Qt 6.6.3 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 11.3.0), unknown unknown PASS : tst_QDialogButtonBox::initTestCase() FAIL! : tst_QDialogButtonBox::standardButtons() Compared values are not the same Actual (buttonBox.buttons().size()): 4 Expected (3) : 3 Loc: [/tmp/guix-build-qtbase-6.6.3.drv-0/qtbase-everywhere-src-6.6.3/tests/auto/widgets/widgets/qdialogbuttonbox/tst_qdialogbuttonbox.cpp(806)]
The full build log can be recovered from here: https://ci.guix.gnu.org/build/3768067/log/raw (also attached for posterity).
- relates to
-
QTBUG-123634 tst_qmltyperegistrar::typeInModuleMajorVersionZero test failure
-
- Closed
-
| For Gerrit Dashboard: QTBUG-123939 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 557993,6 | QDialogButtonBox: properly clear buttons in setStandardButtons() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 559508,2 | QDialogButtonBox: properly clear buttons in setStandardButtons() | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 559509,2 | QDialogButtonBox: properly clear buttons in setStandardButtons() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |