QDialogButtonBox: properly clear buttons in setStandardButtons()

When setting new buttons with setStandardButtons(), the old ones are
deleted by iterating over d->standardButtonHash. But this hash is
modified when a button is destroyed and therefore sometimes not all
buttons were deleted.
This amends df735d794fd2e545c18b9e345e833422bcd64329.

Fixes: QTBUG-123939
Pick-to: 6.5
Change-Id: I867086855cfde88a7b22a5579662f250b9db0042
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 0e5d5513279cff61673adc2ace5ed27202bbdc97)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>